# quick_renderer

./: Cargo.toml
examples/: bvh.rs  jfa_initialization.frag  jfa_step.frag  jump_flooding_algorithm.rs  outline_render.rs  simple_render.rs  simple_render_egui_interaction.rs  smooth_sphere.frag  test.frag  test.vert
shaders/: infinite_grid.frag  infinite_grid.vert  jfa_convert_to_distance.frag  jfa_convert_to_distance.vert  jfa_initialization.frag  jfa_initialization.vert  jfa_step.frag  jfa_step.vert  smooth_sphere.frag
src/: app.rs  bvh.rs  camera.rs  drawable.rs  fps.rs  framebuffer.rs  gl_mesh.rs  gpu_immediate.rs  gpu_utils.rs  infinite_grid.rs  jfa.rs  lib.rs  mesh.rs  meshio.rs  meshreader.rs  rasterize.rs  renderbuffer.rs  shader.rs  texture.rs  util.rs
src/camera/: interactable.rs  mod.rs
src/mesh/: builtins.rs  mod.rs
src/shader/: builtins.rs  mod.rs
