[package]
name = "quick_renderer"
version = "0.1.0"
authors = ["ishbosamiya <ishbosamiya@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glfw = "0.41"
gl = "0.14"
egui = "0.13"
egui_glfw = { git = "ssh://git@github.com/ishbosamiya/egui_glfw.git" }
nalgebra-glm = "0.13"