[package]
name = "quick_renderer"
version = "0.6.1+dev"
authors = ["ishbosamiya <ishbosamiya@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glfw = "0.41"
gl = "0.14"
egui_glfw = { version = "0.4.0", git = "ssh://git@github.com/ishbosamiya/egui_glfw.git", branch = "v0.4.0-release" }
nalgebra-glm = { version = "0.18", features = ["serde-serialize"] }
generational-arena = { version = "0.2", features = ["serde"] }
itertools = "0.10"
lazy_static = "1.4"
serde = { version = "1.0", features = ["derive"] }
paste = "1.0"
image = "0.23"
rand = "0.8"
memoffset = "0.6"
num-traits = "0.2"